# scipy

./: CMakeLists.txt  README.md  RELEASE_NOTES.md  build.properties
benchmarks/betainc/: CMakeLists.txt  main.cpp
doc/: CMakeLists.txt  Doxyfile.in
include/scipy/linalg/: lstsq.hpp
include/scipy/special/: betainc.hpp
include/scipy/stats/: mode.hpp
samples/stats/: CMakeLists.txt  main.cpp
scripts/: build.sh  deploy.sh
unit_tests/: CMakeLists.txt
unit_tests/include/: ScipyTest.hpp
unit_tests/src/: LinalgTest.cpp  SpecialTest.cpp  StatsTest.cpp  main.cpp
